apps/transmission-openvpn/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
    meta.helm.sh/release-name: transmission-openvpn
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2022-08-21T16:18:46Z"
  generation: 3
  labels:
    app.kubernetes.io/instance: transmission-openvpn
    app.kubernetes.io/name: transmission-openvpn
    app.kubernetes.io/version: "4.0"
  name: transmission-openvpn
  namespace: default
  resourceVersion: "18870628"
  uid: eac2dc77-5f0f-4ea9-9c26-d176e5a0f295
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: transmission-openvpn
      app.kubernetes.io/name: transmission-openvpn
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/configmap: 11d34825492dae30125d389554422cb351019f7013990a5c50b742bda0561810
        checksum/secret: d798f11a095a21019d5fa4a108bf073c3a10724ad0e28dab431bc41cc3789546
      labels:
        app.kubernetes.io/instance: transmission-openvpn
        app.kubernetes.io/name: transmission-openvpn
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: transmission-openvpn
        - secretRef:
            name: transmission-openvpn
        image: haugene/transmission-openvpn:4.0
        imagePullPolicy: IfNotPresent
        name: transmission-openvpn
        ports:
        - containerPort: 9091
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: http
          timeoutSeconds: 1
        resources:
          limits:
            memory: 2000Mi
            cpu: 4000m
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /dev/net/tun
          name: dev-net-tun
        - mountPath: /data
          name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: transmission-openvpn
      serviceAccountName: transmission-openvpn
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /dev/net/tun
          type: CharDevice
        name: dev-net-tun
      - name: data
        nfs:
          path: /volume1/transmission
          server: 192.168.1.253
